rest-api: add /v1/storage-pool-definitions resource
allows create/delete/modify of storage pool definitions
bump rest-api version to 1.0.2
