# docs/rest_v1_openapi.yaml
@@ -15,7 +15,7 @@ info:
     ```
 
     After setting this properties restart the controller and the new values should be used.
-  version: 1.0.1
+  version: "1.0.2"
   title: Linstor REST API
   contact:
     email: rene.peinthor@linbit.com
@@ -26,6 +26,127 @@ tags:
 - name: developers
   description: Operations available to regular developers
 paths:
+  /v1/storage-pool-definitions:
+    get:
+      tags:
+        - developers
+      summary: Lists storage pool definitions
+      operationId: storagePoolDfnList
+      description: Returns an array of all storage pool definitions
+      parameters:
+        - $ref: '#/components/parameters/Offset'
+        - $ref: '#/components/parameters/Limit'
+      responses:
+        '200':
+          description: Array of all storage pool definitions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/StoragePoolDefinition'
+    post:
+      tags:
+      - developers
+      summary: add a storage pool definition to Linstor
+      operationId: storagePoolDfnAdd
+      description: |
+        Adds a storage pool definition to Linstor
+      responses:
+        '201':
+          description: storage pool definition created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiCallRc'
+        '400':
+          $ref: '#/components/responses/InvalidInput'
+        '500':
+          $ref: '#/components/responses/OperationFailed'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StoragePoolDefinition'
+            example:
+              storage_pool_name: ssd_pool
+        description: Storage pool definition to add
+  /v1/storage-pool-definitions/{storagepool}:
+    parameters:
+      - name: storagepool
+        in: path
+        required: true
+        schema:
+          type: string
+          description: Storage pool definition to use
+    get:
+      tags:
+        - developers
+      summary: Lists a specific storage pool definition
+      operationId: storagePoolDfnGet
+      description: Returns a specific storage pool definition
+      responses:
+        '200':
+          description: Specified storage pool definition
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StoragePoolDefinition'
+    put:
+      tags:
+        - developers
+      summary: modify a storage pool definition
+      operationId: storPoolDfnModify
+      description: |
+        Sets or modifies properties
+
+        Possible properties are:
+        - `MaxOversubscriptionRatio` - range[`1-1000`]
+      responses:
+        '200':
+          description: storage pool definition modified
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiCallRc'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                node_type:
+                  type: string
+                override_props:
+                  $ref: '#/components/schemas/Properties'
+                delete_props:
+                  type: array
+                  items:
+                    type: string
+                delete_namespaces:
+                  type: array
+                  items:
+                    type: string
+            example:
+              override_props:
+                Aux/testprop: '1'
+              delete_props:
+              - Aux/deleteprop
+    delete:
+      tags:
+        - developers
+      summary: delete a storage pool definition
+      operationId: storagePoolDefinitionDelete
+      description: Delete a storage pool definition from Linstor
+      responses:
+        '200':
+          description: storage pool definition deleted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiCallRc'
+        '500':
+          $ref: '#/components/responses/OperationFailed'
   /v1/nodes:
     get:
       tags:
@@ -2814,3 +2935,10 @@ components:
           type: string
     PassPhraseEnter:
       type: string
+    StoragePoolDefinition:
+      type: object
+      properties:
+        storage_pool_name:
+          type: string
+        props:
+          $ref: '#/components/schemas/Properties'
